PELEParser.py
# Generated from PELE.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PELEParser ( Parser ):

    grammarFileName = "PELE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "'{'", "'}'", "','", 
                     "'='", "'-'", "'*'", "'/'", "'%'", "'+'", "'['", "']'", 
                     "'true'", "'false'", "<INVALID>", "'si'", "'sino'", 
                     "'mostrar'", "'mientras'", "'por'", "'for'", "'in'", 
                     "'funcion'", "'retornar'", "'no'", "'|>'", "'&&'", 
                     "'||'", "'->'", "'**'", "'=='", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'\\'", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TRUE", "FALSE", 
                      "STRING", "SI", "SINO", "MOSTRAR", "MIENTRAS", "POR", 
                      "FOR", "IN", "FUNCION", "RETORNAR", "NOT", "PIPE", 
                      "AND", "OR", "ARROW", "POW", "EQEQ", "NEQ", "LE", 
                      "GE", "LT", "GT", "BACKSLASH", "DOT", "COLON", "ID", 
                      "FLOAT", "INT", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_ifStatement = 3
    RULE_functionDecl = 4
    RULE_params = 5
    RULE_assignment = 6
    RULE_expr = 7
    RULE_postfix = 8
    RULE_atom = 9
    RULE_dictEntry = 10

    ruleNames =  [ "program", "block", "statement", "ifStatement", "functionDecl", 
                   "params", "assignment", "expr", "postfix", "atom", "dictEntry" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    TRUE=15
    FALSE=16
    STRING=17
    SI=18
    SINO=19
    MOSTRAR=20
    MIENTRAS=21
    POR=22
    FOR=23
    IN=24
    FUNCION=25
    RETORNAR=26
    NOT=27
    PIPE=28
    AND=29
    OR=30
    ARROW=31
    POW=32
    EQEQ=33
    NEQ=34
    LE=35
    GE=36
    LT=37
    GT=38
    BACKSLASH=39
    DOT=40
    COLON=41
    ID=42
    FLOAT=43
    INT=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PELEParser.BlockContext,0)


        def EOF(self):
            return self.getToken(PELEParser.EOF, 0)

        def getRuleIndex(self):
            return PELEParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PELEParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.block()
            self.state = 23
            self.match(PELEParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.StatementContext)
            else:
                return self.getTypedRuleContext(PELEParser.StatementContext,i)


        def getRuleIndex(self):
            return PELEParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PELEParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 31336332501268) != 0):
                self.state = 25
                self.statement()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PELEParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MostrarStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MOSTRAR(self):
            return self.getToken(PELEParser.MOSTRAR, 0)
        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMostrarStmt" ):
                listener.enterMostrarStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMostrarStmt" ):
                listener.exitMostrarStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMostrarStmt" ):
                return visitor.visitMostrarStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class FunctionDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDecl(self):
            return self.getTypedRuleContext(PELEParser.FunctionDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclStmt" ):
                listener.enterFunctionDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclStmt" ):
                listener.exitFunctionDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclStmt" ):
                return visitor.visitFunctionDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class CicloWhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MIENTRAS(self):
            return self.getToken(PELEParser.MIENTRAS, 0)
        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)

        def block(self):
            return self.getTypedRuleContext(PELEParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCicloWhile" ):
                listener.enterCicloWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCicloWhile" ):
                listener.exitCicloWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloWhile" ):
                return visitor.visitCicloWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(PELEParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForEachContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(PELEParser.FOR, 0)
        def ID(self):
            return self.getToken(PELEParser.ID, 0)
        def IN(self):
            return self.getToken(PELEParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)

        def block(self):
            return self.getTypedRuleContext(PELEParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForEach" ):
                listener.enterForEach(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForEach" ):
                listener.exitForEach(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForEach" ):
                return visitor.visitForEach(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(PELEParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class CForContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def POR(self):
            return self.getToken(PELEParser.POR, 0)
        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(PELEParser.AssignmentContext,i)

        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)

        def block(self):
            return self.getTypedRuleContext(PELEParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCFor" ):
                listener.enterCFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCFor" ):
                listener.exitCFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCFor" ):
                return visitor.visitCFor(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETORNAR(self):
            return self.getToken(PELEParser.RETORNAR, 0)
        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = PELEParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = PELEParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.assignment()
                self.state = 32
                self.match(PELEParser.T__0)
                pass

            elif la_ == 2:
                localctx = PELEParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.expr(0)
                self.state = 35
                self.match(PELEParser.T__0)
                pass

            elif la_ == 3:
                localctx = PELEParser.MostrarStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.match(PELEParser.MOSTRAR)
                self.state = 38
                self.match(PELEParser.T__1)
                self.state = 39
                self.expr(0)
                self.state = 40
                self.match(PELEParser.T__2)
                self.state = 41
                self.match(PELEParser.T__0)
                pass

            elif la_ == 4:
                localctx = PELEParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.ifStatement()
                pass

            elif la_ == 5:
                localctx = PELEParser.CicloWhileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.match(PELEParser.MIENTRAS)
                self.state = 45
                self.match(PELEParser.T__1)
                self.state = 46
                self.expr(0)
                self.state = 47
                self.match(PELEParser.T__2)
                self.state = 48
                self.match(PELEParser.T__3)
                self.state = 49
                self.block()
                self.state = 50
                self.match(PELEParser.T__4)
                pass

            elif la_ == 6:
                localctx = PELEParser.CForContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.match(PELEParser.POR)
                self.state = 53
                self.match(PELEParser.T__1)
                self.state = 54
                self.assignment()
                self.state = 55
                self.match(PELEParser.T__0)
                self.state = 56
                self.expr(0)
                self.state = 57
                self.match(PELEParser.T__0)
                self.state = 58
                self.assignment()
                self.state = 59
                self.match(PELEParser.T__2)
                self.state = 60
                self.match(PELEParser.T__3)
                self.state = 61
                self.block()
                self.state = 62
                self.match(PELEParser.T__4)
                pass

            elif la_ == 7:
                localctx = PELEParser.ForEachContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 64
                self.match(PELEParser.FOR)
                self.state = 65
                self.match(PELEParser.T__1)
                self.state = 66
                self.match(PELEParser.ID)
                self.state = 67
                self.match(PELEParser.IN)
                self.state = 68
                self.expr(0)
                self.state = 69
                self.match(PELEParser.T__2)
                self.state = 70
                self.match(PELEParser.T__3)
                self.state = 71
                self.block()
                self.state = 72
                self.match(PELEParser.T__4)
                pass

            elif la_ == 8:
                localctx = PELEParser.FunctionDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.functionDecl()
                pass

            elif la_ == 9:
                localctx = PELEParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.match(PELEParser.RETORNAR)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(PELEParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(PELEParser.SI, 0)

        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.BlockContext)
            else:
                return self.getTypedRuleContext(PELEParser.BlockContext,i)


        def SINO(self):
            return self.getToken(PELEParser.SINO, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(PELEParser.IfStatementContext,0)


        def getRuleIndex(self):
            return PELEParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = PELEParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PELEParser.SI)
            self.state = 82
            self.match(PELEParser.T__1)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(PELEParser.T__2)
            self.state = 85
            self.match(PELEParser.T__3)
            self.state = 86
            self.block()
            self.state = 87
            self.match(PELEParser.T__4)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 88
                self.match(PELEParser.SINO)
                self.state = 89
                self.ifStatement()

            elif la_ == 2:
                self.state = 90
                self.match(PELEParser.SINO)
                self.state = 91
                self.match(PELEParser.T__3)
                self.state = 92
                self.block()
                self.state = 93
                self.match(PELEParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(PELEParser.FUNCION, 0)

        def ID(self):
            return self.getToken(PELEParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(PELEParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(PELEParser.ParamsContext,0)


        def getRuleIndex(self):
            return PELEParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = PELEParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(PELEParser.FUNCION)
            self.state = 98
            self.match(PELEParser.ID)
            self.state = 99
            self.match(PELEParser.T__1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 100
                self.params()


            self.state = 103
            self.match(PELEParser.T__2)
            self.state = 104
            self.match(PELEParser.T__3)
            self.state = 105
            self.block()
            self.state = 106
            self.match(PELEParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PELEParser.ID)
            else:
                return self.getToken(PELEParser.ID, i)

        def getRuleIndex(self):
            return PELEParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = PELEParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PELEParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 109
                self.match(PELEParser.T__5)
                self.state = 110
                self.match(PELEParser.ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PELEParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PELEParser.ExprContext,0)


        def getRuleIndex(self):
            return PELEParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PELEParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PELEParser.ID)
            self.state = 117
            self.match(PELEParser.T__6)
            self.state = 118
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PELEParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PostfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfix(self):
            return self.getTypedRuleContext(PELEParser.PostfixContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixExpr" ):
                listener.enterPostfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixExpr" ):
                listener.exitPostfixExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpr" ):
                return visitor.visitPostfixExpr(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.ExprContext)
            else:
                return self.getTypedRuleContext(PELEParser.ExprContext,i)

        def AND(self):
            return self.getToken(PELEParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowerExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.ExprContext)
            else:
                return self.getTypedRuleContext(PELEParser.ExprContext,i)

        def POW(self):
            return self.getToken(PELEParser.POW, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowerExpr" ):
                listener.enterPowerExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowerExpr" ):
                listener.exitPowerExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerExpr" ):
                return visitor.visitPowerExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivModExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.ExprContext)
            else:
                return self.getTypedRuleContext(PELEParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivModExpr" ):
                listener.enterMulDivModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivModExpr" ):
                listener.exitMulDivModExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivModExpr" ):
                return visitor.visitMulDivModExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PELEParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PELEParser.ExprContext)
            else:
                return self.getTypedRuleContext(PELEParser.ExprContext,i)

        def EQEQ(self):
            return self.getToken(PELEParser.EQEQ, 0)
        def NEQ(self):
            return self.getToken(PELEParser.NEQ, 0)
